--- a/web-server/public/css/style.css
+++ b/web-server/public/css/style.css
@@ -1,7 +1,45 @@
-h1{
-    color: grey;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+body{
+    color: #333333;
+    font-family: Montserrat;
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 0 16px;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
-img{
-    width: auto;
-    height: 15rem;
+
+.main-content{
+    flex-grow: 1;
+}
+footer{
+    color: #888888;
+    border-top: 1px solid #eeeeee;
+    margin-top: 16px;
+    padding: 16px 0;
+}
+
+header{
+    margin-top: 16px;
+    margin-bottom: 48px;
+}
+
+h1{
+    font-size: 64px;
+    margin-bottom: 16px;
+}
+
+header a{
+    text-decoration: none;
+    color: #888888;
+    margin-right: 16px;
+}
+header a::hover{
+    color: red;
+}
+.person{
+    width: 250px;
+    height: auto;
 }
