--- a/web-server/template/views/about.hbs
+++ b/web-server/template/views/about.hbs
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {{>icon}}
+    <title>About</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <h1>{{title}}</h1>
-    <p>Go ask {{name}}</p>
+    <div class="main-content">
+        {{>header}}
+        <img src="img/ape.jpg" alt="" class="person">
+    </div>
+
+    {{>footer}}
 </body>
+
 </html>
