--- a/web-server/template/views/index.hbs
+++ b/web-server/template/views/index.hbs
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weathering now!</title>
+    {{>icon}}
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <h1>{{title}}</h1>
-    <p>{{name}}</p>
+    <div class="main-content">
+        {{>header}}
+        <p>use this site to get your weather</p>
+    </div>
+
+
+    {{>footer}}
+
+
 </body>
+
 </html>
