--- a/web-server/public/css/style.css
+++ b/web-server/public/css/style.css
@@ -43,3 +43,16 @@ header a::hover{
     width: 250px;
     height: auto;
 }
+input{
+    border: 1px solid #cccccc;
+    padding: 8px;
+}
+button{
+    cursor: pointer;
+    border:1px solid #888888;
+    background: #888888;
+    color: white;
+    padding: 8px;
+    
+
+}
