--- a/web-server/template/views/index.hbs
+++ b/web-server/template/views/index.hbs
@@ -8,18 +8,28 @@
     <title>Weathering now!</title>
     {{>icon}}
     <link rel="stylesheet" href="/css/style.css">
+
 </head>
 
 <body>
     <div class="main-content">
         {{>header}}
         <p>use this site to get your weather</p>
+
+        <form>
+            <input placeholder="Location">
+            <button>Search</button>
+        </form>
+
+        <p id="msg-1"></p>
+        <p id="msg-2"></p>
+
     </div>
 
 
     {{>footer}}
 
-
+    <script src="/js/app.js"></script>
 </body>
 
 </html>
