--- a/web-server/template/views/about.hbs
+++ b/web-server/template/views/about.hbs
@@ -13,6 +13,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Fatwa Arya . It uses data from mapbox.com and weatherstack.com</p>
         <img src="img/ape.jpg" alt="" class="person">
     </div>
 
