--- a/web-server/template/views/index.hbs
+++ b/web-server/template/views/index.hbs
@@ -14,7 +14,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>use this site to get your weather</p>
+        <p>use this form to get your weather forecast</p>
 
         <form>
             <input placeholder="Location">
